Apply Java 21 features for improved readability and performance
- Use Math.clamp() instead of Math.max(min, Math.min(value, max))
  - Rgb.clampSixel(), Rgb.addErrorAndClamp(), Rgb.clampSixelValue()
  - HQSixelEncoder.findSearchCenter() for lastPcaSearchIndex
  - ImageUtils.rgbMove() for RGB clamping
- Add Rgb.clampRgbValue() for 0-255 clamping
- Use Arrays.setAll() for sixelRows initialization
- Use IntStream for PCA color list building with sorted() and collect()
- Use Rgb.getRed/getGreen/getBlue/SIXEL_BLACK/SIXEL_WHITE in medianCut
- Add java.util.Arrays import

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>